test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/void/void_equality.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  void
  identifier(x)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(x)
  (
  )
  ==
  (
  void
  )
  const int(10)
  ;
  }
